# superlinked_demo

./: .env.dev  .gitignore  .streamlit  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
code/: queries.py  semantic_food_search.py  utills.py
data/: sampled_food_db.parquet  sr_legacy_food_db.parquet  sr_legacy_food_db_clean.parquet  umap_df.parquet
notebooks/: 01_exploration.ipynb  food_database_demo.ipynb  semantic_search_netflix_titles.ipynb  translation_example.ipynb  umap.ipynb
scripts/: build_umap.py
src/backend/: .env.dev  config.py  queries.py  types.py
src/backend/features/: umap.py
src/backend/ingest/: loader.py  schema.py  umap.py
src/backend/search/: queries.py  types.py
src/backend/utils/: data.py  types.py  umap.py
src/frontend/: main.py
